# henry-task-04

./: .gitignore  README.md
python/: .dockerignore  .env.example  Dockerfile  README.md  api.py  docker-compose.yml  fly.api.toml  fly.worker.toml  pyproject.toml  requirements.txt  worker.py
python/data/contracts/: README.md
python/data/contracts/contract_001/: metadata.json
python/data/contracts/contract_002/: metadata.json
python/data/contracts/contract_003/: metadata.json
python/data/contracts/contract_004/: metadata.json
python/data/contracts/contract_005/: metadata.json
python/src/: api_cli.py  image_parser.py  main.py  models.py  tracing.py
python/src/adapters/: __init__.py  rabbitmq_consumer.py  rest_api.py
python/src/agents/: contextualization_agent.py  extraction_agent.py
python/src/config/: settings.py
python/src/domain/: __init__.py  interfaces.py  models.py
python/src/infrastructure/: __init__.py
python/src/infrastructure/agents/: contextualization.py  extraction.py  factory.py
python/src/infrastructure/parsers/: __init__.py  base.py  factory.py  mock_parser.py  openai_parser.py
python/src/services/: contract_comparison_service.py
python/tests/: test_agents.py  test_validation.py
python/tools/: generate_contracts.py  image_converter.py  pdf_generator.py
python/tools/effects/: __init__.py  lowres.py  photographed.py  scanned.py
python/tools/templates/: __init__.py  base.py  employment.py  lease.py  nda.py  service.py
ruby/: Dockerfile  Gemfile  README.md
ruby/config/: application.rb  credentials.yml.enc  database.yml  (+4 more)
(+2351 files in other folders)
